Driver Referencing A Custom Property In Light Object Data Does Not Get Updated On Change #65662

Closed
opened 2019-06-09 17:47:56 +02:00 by Philip Holzmann · 3 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: blender-2.80.0-git.81b68f7279cd-windows64

Short description of error
When a driver references a Single Property that is stored inside a light's object data, the driver's value is not updated when the property is changed.
(If the property is keyframed, however, it works. It also works for rendering.)

Exact steps for others to reproduce the error
DataDriver.blend
Scene Description:
The light on the left (Light.Object) has its power controlled by a driver reading from a custom property (OnObject) in the object itself.
The light on the right (Light.Data) has its power controlled by a driver reading from a custom property (OnData) in the light's object data.

Steps:

  1. Set the viewport to "Rendered".
  2. Change the value of the property OnObject in Light.Object. The (green) light correctly turns on / off.
  3. Change the value of the property OnData in Light.Data's object data. The (red) light does not respond. I'd expect it to update when the value changes.
**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: blender-2.80.0-git.81b68f7279cd-windows64 **Short description of error** When a driver references a *Single Property* that is stored inside a light's *object data*, the driver's value is not updated when the property is changed. (If the property is keyframed, however, it works. It also works for rendering.) **Exact steps for others to reproduce the error** [DataDriver.blend](https://archive.blender.org/developer/F7096421/DataDriver.blend) Scene Description: The light on the left (*Light.Object*) has its power controlled by a driver reading from a *custom property* (*OnObject*) in the object itself. The light on the right (*Light.Data*) has its power controlled by a driver reading from a *custom property* (*OnData*) in the light's object data. Steps: 1. Set the viewport to "Rendered". 2. Change the value of the property *OnObject* in *Light.Object*. The (green) light correctly turns on / off. 3. Change the value of the property *OnData* in *Light.Data*'s object data. The (red) light does not respond. I'd expect it to update when the value changes.

Added subscriber: @Foaly

Added subscriber: @Foaly
Sergey Sharybin was assigned by Sebastian Parborg 2019-06-17 12:14:25 +02:00

This issue was referenced by 5e7e49e00d

This issue was referenced by 5e7e49e00d46734281b28a82582e3e3dd37e609c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65662
No description provided.