Fix T65662: Drivers on custom properties doesn't properly update

Happens if custom property is on object data data-block, which doesn't
have translation or geometry components. Not for lights and cameras at
least.