source/blender/depsgraph/intern/depsgraph_tag.cc
@@ -226,6 +226,9 @@ void depsgraph_tag_to_component_opcode(const ID *id,
     case ID_RECALC_AUDIO:
       *component_type = NodeType::AUDIO;
       break;
+    case ID_RECALC_PARAMETERS:
+      *component_type = NodeType::PARAMETERS;
+      break;
     case ID_RECALC_ALL:
     case ID_RECALC_PSYS_ALL:
       BLI_assert(!"Should not happen");
@@ -659,6 +662,8 @@ const char *DEG_update_tag_as_string(IDRecalcFlag flag)
       return "AUDIO_LISTENER";
     case ID_RECALC_AUDIO:
       return "AUDIO";
+    case ID_RECALC_PARAMETERS:
+      return "PARAMETERS";
     case ID_RECALC_ALL:
       return "ALL";
   }
